--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,15 @@ add_subdirectory(Nade/vendor/glfw)
 
 project(Nade)
 
+set(INC glfw Nade/vendor/glad/include)
+
 add_executable(Nade
 Nade/src/Nade.h
 Nade/src/Entrypoint.cpp	
 Nade/src/Core/Window.h
 Nade/src/Core/Window.cpp
+Nade/vendor/glad/src/glad.c
 )
 
-target_include_directories(Nade PUBLIC glfw)
+target_include_directories(Nade PUBLIC ${INC})
 target_link_libraries(Nade PUBLIC glfw)
