--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Nade/vendor/glfw"]
 	path = Nade/vendor/glfw
 	url = https://github.com/glfw/glfw
+[submodule "Nade/vendor/glad"]
+	path = Nade/vendor/glad
+	url = https://github.com/extorc/glad
