--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ Nade/src/Core/Window.h
 Nade/src/Core/Window.cpp
 Nade/vendor/glad/src/glad.c
 Nade/src/Graphics/Components/RawModel.h
+Nade/src/Graphics/Components/Shader.h
+Nade/src/Graphics/Components/Shader.cpp
 Nade/src/Graphics/Loaders/ModelLoader.cpp
 Nade/src/Graphics/Loaders/ModelLoader.h
 )
