--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Nade/vendor/glad"]
 	path = Nade/vendor/glad
 	url = https://github.com/extorc/glad
+[submodule "Nade/vendor/glm"]
+	path = Nade/vendor/glm
+	url = https://github.com/g-truc/glm
