--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Nade/vendor/glm"]
 	path = Nade/vendor/glm
 	url = https://github.com/g-truc/glm
+[submodule "Nade/vendor/assimp"]
+	path = Nade/vendor/assimp
+	url = https://github.com/assimp/assimp
