Primitive Physics System
Physics Object

Velocity in object

Reference passed in Renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ target_include_directories(Nade PUBLIC
     Nade/src/Core
     Nade/src/Core/Events
     Nade/src/Core/Input
+    Nade/src/Core/Physics
     Nade/src/Components
     Nade/vendor/glm
     Nade/vendor/stb_image
